@@ -126,7 +126,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/units_edit_working
 
     $form->addHiddenValue('address', $session->get('address'));
 
-    $form->addHeaderAction('add', __('Add'))
+    $form->addHeaderAction('add', __('Add Lessons'))
         ->setURL('/modules/Planner/units_edit_working_add.php')
         ->addParams($urlParams)
         ->displayLabel();
