@@ -55,6 +55,7 @@ v30.0.00
         Data Updater: fixed attachments being cleared when new data updates are submitted
         Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
         Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
+        Planner: fixed access to class list in Edit Unit when viewing past and upcoming years
         Staff: fixed coverage longer than one week not including staff duty and activity cover
         Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
 
